Add Google AdSense integration with professional ad placements

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
       }
     }
     </script>
+    
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
+     crossorigin="anonymous"></script>
 </head>
 <body class="bg-gray-50" style="font-family: 'Inter', sans-serif;">
     <!-- REALISTIC GOOGLE DOCS INTERFACE -->
@@ -193,11 +197,37 @@
         <!-- Main Content -->
         <main class="main-content">
             <div class="content-wrapper">
+                <!-- Top Banner Ad -->
+                <div class="ad-container ad-banner-top">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+                         data-ad-slot="XXXXXXXXXX"
+                         data-ad-format="auto"
+                         data-full-width-responsive="true"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
+
                 <!-- Featured Section -->
                 <section class="featured-section">
                     <h2 class="section-title">Featured Games</h2>
                     <div class="featured-grid" id="featuredGrid"></div>
                 </section>
+
+                <!-- Middle Banner Ad -->
+                <div class="ad-container ad-banner-middle">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+                         data-ad-slot="XXXXXXXXXX"
+                         data-ad-format="auto"
+                         data-full-width-responsive="true"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
 
                 <!-- All Games Section -->
                 <section class="games-section">
