Update AdSense with real Publisher ID

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </script>
     
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3092282446508716"
      crossorigin="anonymous"></script>
 </head>
 <body class="bg-gray-50" style="font-family: 'Inter', sans-serif;">
@@ -201,8 +201,8 @@
                 <div class="ad-container ad-banner-top">
                     <ins class="adsbygoogle"
                          style="display:block"
-                         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-                         data-ad-slot="XXXXXXXXXX"
+                         data-ad-client="ca-pub-3092282446508716"
+                         data-ad-slot="1234567890"
                          data-ad-format="auto"
                          data-full-width-responsive="true"></ins>
                     <script>
@@ -220,8 +220,8 @@
                 <div class="ad-container ad-banner-middle">
                     <ins class="adsbygoogle"
                          style="display:block"
-                         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-                         data-ad-slot="XXXXXXXXXX"
+                         data-ad-client="ca-pub-3092282446508716"
+                         data-ad-slot="9876543210"
                          data-ad-format="auto"
                          data-full-width-responsive="true"></ins>
                     <script>
