Add AdSense verification meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-3092282446508716">
     <title>My Essay - Google Docs</title>
     <meta name="description" content="Academic essay on the impact of social media on modern communication - Google Docs">
     <meta name="keywords" content="essay, social media, communication, academic, research">
