Fix scrolling and temporarily disable ads until properly configured

--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
         <!-- Main Content -->
         <main class="main-content">
             <div class="content-wrapper">
-                <!-- Top Banner Ad -->
+                <!-- Top Banner Ad - Temporarily disabled until AdSense is fully configured -->
+                <!-- 
                 <div class="ad-container ad-banner-top">
                     <ins class="adsbygoogle"
                          style="display:block"
@@ -210,6 +211,7 @@
                          (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
                 </div>
+                -->
 
                 <!-- Featured Section -->
                 <section class="featured-section">
@@ -217,7 +219,8 @@
                     <div class="featured-grid" id="featuredGrid"></div>
                 </section>
 
-                <!-- Middle Banner Ad -->
+                <!-- Middle Banner Ad - Temporarily disabled until AdSense is fully configured -->
+                <!--
                 <div class="ad-container ad-banner-middle">
                     <ins class="adsbygoogle"
                          style="display:block"
@@ -229,6 +232,7 @@
                          (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
                 </div>
+                -->
 
                 <!-- All Games Section -->
                 <section class="games-section">
