--- a/games/clash-royal.html
+++ b/games/clash-royal.html
@@ -1,7 +1,7 @@
 <html>
 <base href="https://cdn.jsdelivr.net/gh/bubbls/UGS-Assets@main/clashofvikings/">
 <head>
-  <title>Clash Of Vikings</title>
+  <title>Clash Of Vikings - Crack Hub</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <!-- Use this metatag when Apple fixes their IOS 9
@@ -21,12 +21,39 @@
 
   <!-- APICode -->
   <script type="text/javascript" src="https://s3.amazonaws.com/marketjs-us/en/patch/webaudio-context-patch.js"></script>
+  
+  <style>
+    .crack-hub-credit {
+      position: fixed;
+      bottom: 10px;
+      right: 10px;
+      background: rgba(0, 0, 0, 0.8);
+      color: #fff;
+      padding: 8px 16px;
+      border-radius: 8px;
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+      font-weight: 600;
+      z-index: 99999;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(10px);
+    }
+    .crack-hub-credit span {
+      color: #00d9ff;
+    }
+  </style>
 </head>
 
 <div class="gamecenter-activator"></div>
 
 <body onload="setTimeout(function(){window.scrollTo(0,1)},1);">
   <!--body-->
+  
+  <!-- Crack Hub Credit -->
+  <div class="crack-hub-credit">
+    <span>Crack Hub</span> made by Ryan
+  </div>
+  
   <div id="ajaxbar">
     <div id="game"><canvas id="canvas"></canvas></div>
 
