Add featured games section to sidebar

--- a/index.html
+++ b/index.html
@@ -162,6 +162,13 @@
                         <span id="gameCount"></span>
                     </div>
                 </div>
+                
+                <!-- Featured Games Section -->
+                <div class="featured-section-sidebar">
+                    <h3 class="featured-section-title">⭐ Featured Games</h3>
+                    <div class="featured-games-grid" id="featuredGamesGrid"></div>
+                </div>
+                
                 <div class="games-list" id="gamesList"></div>
             </div>
 
