Change to one-time payment of

--- a/premium.html
+++ b/premium.html
@@ -257,9 +257,9 @@
             </div>
 
             <div class="pricing-section">
-                <h2 class="pricing-title">Expected Pricing</h2>
-                <div class="price">$4.99</div>
-                <p class="price-note">per month • Cancel anytime</p>
+                <h2 class="pricing-title">One-Time Payment</h2>
+                <div class="price">$7.00</div>
+                <p class="price-note">Lifetime access • Pay once, own forever</p>
                 <button class="notify-btn" onclick="notifyMe()">Notify Me When Available</button>
             </div>
 
