--- a/games/1v1lol/index.html
+++ b/games/1v1lol/index.html
@@ -1,6 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-us">
   <head>
+
+<script src="/js/all.js"></script>
+
+
     <meta charset="utf-8" />
     <title>1v1.LOL</title>
     <script src="js/googleAnalytics.js"></script>
@@ -338,6 +342,5 @@
 
       fixMacUserAgent();
     </script>
-    <script src="/js/main.js"></script>
   </body>
 </html>
