Add premium proxy with secret admin login (admin/gommenmode)

--- a/premium.html
+++ b/premium.html
@@ -226,6 +226,12 @@
                 </div>
 
                 <div class="feature-card">
+                    <div class="feature-icon">🌐</div>
+                    <h3 class="feature-title">Web Proxy Access</h3>
+                    <p class="feature-description">Browse any website anonymously with our built-in premium proxy service.</p>
+                </div>
+
+                <div class="feature-card">
                     <div class="feature-icon">⚡</div>
                     <h3 class="feature-title">Priority Loading</h3>
                     <p class="feature-description">Get instant access to games with priority server connections and faster load times.</p>
